[workspace]
resolver = "2"
members = [
    "app",
    "lib",
]

[workspace.package]
authors = [
    "Ash Manning <ash@layertwolabs.com>",
]
edition = "2021"
version = "0.1.0"

[workspace.dependencies.bip300301]
git = "https://github.com/Ash-L2L/bip300301.git"
rev = "2315ddde381af907fcf8e029046bd5c43448a71f"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"